<resources>

    <string name="app_name">Vorlesungsverlegung</string>
    <string name="main_subtitle">Heutige Vorlesungen:</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_vorlesung">Vorlesungen</string>
    <string name="subtitle_ver">Verlegen um:</string>
    <string name="title_15m">15 Minuten</string>
    <string name="title_30m">30 Minuten</string>
    <string name="title_ind">Uhrzeit wählen</string>
    <string name="title_ausfallen">Ausfallen lassen</string>
	<string name="local_time">Do., 26.07.12</string>
</resources>