<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="3"
    android:orientation="vertical"
    android:background="#000000" >

    <TextView
        android:id="@+id/vorles2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:textColor="#FFFFFF"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/zeit2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/vorles2"
        android:textColor="#FFFFFF"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/button_15"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_30"
        android:layout_alignRight="@+id/button_30"
        android:layout_below="@+id/zeit2"
        android:layout_marginTop="45dp"
        android:textColor="#FFFFFF"
        android:text="@string/title_15m" />

    <Button
        android:id="@+id/button_30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_ind"
        android:layout_alignRight="@+id/button_ind"
        android:layout_below="@+id/button_15"
        android:layout_marginTop="16dp"
        android:textColor="#FFFFFF"
        android:text="@string/title_30m" />

    <Button
        android:id="@+id/button_ind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_ausfallen"
        android:layout_alignRight="@+id/button_ausfallen"
        android:layout_below="@+id/textView2"
        android:textColor="#FFFFFF"
        android:text="@string/title_ind" />
    
    <Button
        android:id="@+id/button_ausfallen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_ind"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:textColor="#FFFFFF"
        android:text="@string/title_ausfallen" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/zeit2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:textColor="#FFFFFF"
        android:text="@string/subtitle_ver"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_30"
        android:layout_centerHorizontal="true"
        android:textColor="#FFFFFF"
        android:layout_marginTop="22dp"
        android:text="Oder:"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>